# rust-lambda-example

./: Cargo.toml  README.md
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: lambda-api-gateway-stack.ts
infrastructure/: package-lock.json  package.json
infrastructure/lib/: lambda-api-gateway-stack.ts
src/: main.rs
