[package]
name = "sample-api"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = { version = "0.7.3", default-features = false, features = [
  "apigw_http",
] }
lambda_runtime = "0.7.3"
aws_lambda_events = "0.7.3"
tokio = { version = "1.26.0", features = ["macros"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "fmt",
] }
serde_json = "1.0.94"
serde = "1.0.130"
anyhow = "1.0.69"
